# AIPulse

./: .dockerignore  .env.example  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.claude/ecc/: install-state.json
docs/: AIPulse需求文档v0.1.md
extensions/chromium/: manifest.json  package.json  playwright.config.ts  pnpm-lock.yaml  popup.html  tsconfig.json  vite.config.ts  vitest.config.ts
extensions/chromium/src/: background.ts  content.ts  http.ts  native.ts  popup-debugger.ts  popup.css  popup.tsx  types.ts  utils.ts
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  router.ts  style.css
frontend/src/components/: AppHeader.vue
frontend/src/styles/: tokens.css
frontend/src/views/: InputView.vue  SettingsView.vue  TasksView.vue
migrations/: env.py
migrations/versions/: 4f9e949906b1_add_scheduler_job_log.py  69213da9a2ed_init.py  8c7007334aed_add_hotspot_tables.py
scripts/: com.aipulse.native_host.json  install-native-host.sh  sync-sidecar-resources.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  commands.rs  lib.rs  main.rs  menu.rs  native_messaging.rs  python_runner.rs
src/aipulse/: server.py
src/aipulse/archive/: base.py  builder.py  obsidian.py
src/aipulse/article/: base.py  extractor.py  registry.py
src/aipulse/collectors/: __init__.py  arxiv.py  baidu.py  base.py  bilibili.py  github.py  news.py  registry.py  v2ex.py  weibo.py  zhihu.py
src/aipulse/core/: article_pipeline.py  config.py  content_router.py  decorators.py  pipeline.py  rpc.py  video_pipeline.py
src/aipulse/desktop/: sidecar.py
src/aipulse/hotspot/: __init__.py  models.py  processor.py  repository.py  schemas.py  service.py  summarizer.py
src/aipulse/pushers/: base.py  feishu.py  registry.py  wechat.py  wechat_bot.py
src/aipulse/rss/: parser.py  sync.py
src/aipulse/scheduler/: client.py  models.py  serializers.py  webui.py
src/aipulse/store/: database.py  models.py  repository.py
src/aipulse/summarizers/: article_summarizer.py  base.py  factory.py  llm.py  video_summarizer.py
src/aipulse/video/: downloader.py  transcriber.py
src/aipulse/web/: routes.py  sse.py
tests/: conftest.py
tests/e2e/: test_hotspot_flow.py
tests/integration/: test_hotspots_api.py  test_pipeline.py  test_repository.py  test_scheduler_api.py  test_server.py  test_sidecar.py  test_tauri_sidecar.py
tests/unit/: test_config.py  test_content_router.py  test_decorators.py  test_pipeline.py  test_routes.py  test_sidecar.py  test_sidecar_submit_mode.py  test_sse.py
tests/unit/archive/: test_builder.py  test_obsidian.py
tests/unit/article/: test_extractor.py
tests/unit/collectors/: test_arxiv.py  test_github.py  test_news.py  test_registry.py
tests/unit/hotspot/: __init__.py  test_models.py  test_processor.py  test_repository.py  test_scoring.py  test_service.py  test_summarizer.py
web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
web/e2e/: dashboard.spec.ts
web/src/: App.vue  main.ts  router.ts
(+107 files in other folders)
