[package]
name = "aipulse-tauri"
version = "0.1.0"
description = "AIPulse macOS menu bar app"
authors = ["AIPulse Contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
anyhow = "1.0"
tokio = { version = "1.43", features = ["full"] }
which = "7.0"
urlencoding = "2.1"
tauri = { version = "2.11.3", features = ["tray-icon", "test"] }
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
